<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/confirm_dialog_layout"
    android:layout_width="280dp"
    android:layout_height="wrap_content"
    android:background="@drawable/confirm_dialog_bg2"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/confirm_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:padding="5dp"
        android:text="@string/confirm_default_title"
        android:textColor="#333"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/confirm_dialog_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/confirm_default_msg"
        android:textColor="#333"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="33dp" 
       	style="android:attr/buttonBarStyle">

        <Button
            android:id="@+id/confirm_dialog_positive_btn"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_style_green"
            android:gravity="center"
            android:text="@string/confirm_positive_txt"
            android:textColor="#fff"
            android:textSize="16sp" 
            style="android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/confirm_dialog_negative_btn"
            style="android:attr/buttonBarButtonStyle"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/btn_style_white"
            android:gravity="center"
            android:text="@string/confirm_negative_txt"
            android:textColor="#333"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>