<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#eee"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="@drawable/title_bar"
        android:gravity="center_vertical" >

        <Button
            android:id="@+id/msg_setting_title_btn_back"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/title_btn_back"
            android:onClick="chat_back"
            android:text="@string/msg_setting_back_btn_txt"
            android:textColor="#fff"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/msg_setting_title_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/msg_setting_title_txt"
            android:textColor="#ffffff"
            android:textSize="20sp" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:gravity="center_vertical"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:background="@drawable/preference_single_item"
                android:gravity="center_vertical" >

                <TextView
                    android:id="@+id/msg_setting_open_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:padding="8dp"
                    android:text="@string/msg_setting_switch_txt"
                    android:textColor="#000"
                    android:textSize="17sp" />

                <Switch
                    android:id="@+id/msg_setting_open"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="40dp"
                    android:layout_marginStart="40dp"
                    android:layout_toEndOf="@id/msg_setting_open_txt"
                    android:layout_toRightOf="@id/msg_setting_open_txt"
                    android:checked="false"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:background="@drawable/preference_single_item"
                android:gravity="center_vertical" >

                <TextView
                    android:id="@+id/msg_setting_number_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:padding="8dp"
                    android:text="@string/msg_setting_number_txt"
                    android:textColor="#000"
                    android:textSize="17sp" />

                <EditText
                    android:id="@+id/msg_setting_number"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="40dp"
                    android:layout_marginStart="40dp"
                    android:layout_toEndOf="@id/msg_setting_number_txt"
                    android:layout_toRightOf="@id/msg_setting_number_txt"
                    android:hint="@string/msg_setting_number_hint"
                    android:inputType="phone" 
                    android:textColor="#000"/>
            </RelativeLayout>

            <Button
                android:id="@+id/msg_setting_positive_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/btn_style_green"
                android:enabled="true"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/msg_setting_positive_btn_txt"
                android:textColor="#fff"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>