<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#fcfcfc"
    android:orientation="vertical">
    
	<RelativeLayout 
		android:layout_width="fill_parent"
		android:layout_height="45dp"
		android:id="@+id/title" 
		android:background="@drawable/title_bar"
		android:gravity="center_vertical"  >  
		
         
   		<TextView
     		android:layout_width="wrap_content" 
     		android:layout_height="wrap_content" 
     		android:text="@string/main_bottom_all_txt"
     		android:layout_centerInParent="true"
     		android:textSize="20sp"		
			android:textColor="#ffffff" />  
		<ImageButton 
		    android:id="@+id/right_btn"
		    android:layout_width="67dp" 
      		android:layout_height="wrap_content"
      		android:layout_alignParentRight="true" 
      		android:layout_alignParentEnd="true"
      		android:layout_centerVertical="true"
      		android:layout_marginRight="5dp"
      		android:layout_marginEnd="5dp"
      		android:contentDescription="@string/title_right_btn_add_txt"
      		android:src="@drawable/title_btn_function"
			android:background="@drawable/title_btn_all_right"/>    
	</RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@drawable/search_bar_bg" >

        <EditText
            android:id="@+id/txt_search"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/search_bar_edit_bg"
            android:drawableLeft="@drawable/search_bar_icon_normal"
            android:drawableStart="@drawable/search_bar_icon_normal"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:singleLine="true"
            android:hint="@string/main_all_search_txt"
            android:inputType="textCapWords"   
            android:textColor="#000" >              
        </EditText>      
    </LinearLayout>
    <ListView android:id="@+id/lv_allbir"
		android:layout_width="fill_parent" 
    	android:layout_height="wrap_content"
    	android:scrollingCache="true"
    	android:smoothScrollbar="true"
    	android:fastScrollEnabled="true"
    	android:choiceMode="multipleChoice"
    	android:drawSelectorOnTop="true">
    </ListView>   
</LinearLayout>
