<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eee"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="@drawable/title_bar"
        android:gravity="center_vertical" >

        <Button
            android:id="@+id/reminder_set_title_btn_back"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/title_btn_back"
            android:onClick="chat_back"
            android:text="@string/reminder_set_back_btn_txt"
            android:textColor="#fff"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/reminder_set_title_txt"
            android:textColor="#ffffff"
            android:textSize="20sp" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:gravity="center_vertical"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:background="@drawable/preference_single_item"
                android:gravity="center_vertical" >

                <TextView
                    android:id="@+id/reminder_set_open_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:padding="8dp"
                    android:text="@string/reminder_set_reminder_open"
                    android:textColor="#000"
                    android:textSize="17sp" />

                <Switch
                    android:id="@+id/reminder_set_open"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="40dp"
                    android:layout_marginStart="40dp"
                    android:layout_toEndOf="@id/reminder_set_open_txt"
                    android:layout_toRightOf="@id/reminder_set_open_txt"
                    android:checked="false"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:background="@drawable/preference_single_item"
                android:gravity="center" >

                <TimePicker
                    android:id="@+id/reminder_set_timepicker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#4F4F4F"
                    android:clickable="false" />
            </RelativeLayout>

            <Button
                android:id="@+id/reminder_set_positive_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="14dp"
                android:background="@drawable/btn_style_green"
                android:enabled="false"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/reminder_set_positive_btn_txt"
                android:textColor="#fff"
                android:textSize="18sp" />

            <Button
                android:id="@+id/reminder_set_nagetive_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="14dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="14dp"
                android:background="@drawable/btn_style_white"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/reminder_set_nagative_btn_txt"
                android:textColor="#333"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>